--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,11 @@ name: Test-workflow
 on:
   pull_request:
     branches: [main]
-    types: [closed]
+    types: [closed, labeled]
 
 jobs:
   frontend:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && github.event.label.name == 'frontend'
     runs-on: ubuntu-latest
 
     steps:
