--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,10 @@ on:
 
 jobs:
   frontend:
-    if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels, 'frontend')
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: testtest
+        run: |
+          echo "${{github.event.pull_request}}"
