--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,7 @@ jobs:
 
     steps:
       - name: testtest
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
-          echo "${{github.event.pull_request}}"
+          echo "$GITHUB_CONTEXT"
