--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,9 @@ jobs:
         working-directory: ${{ env.wd }}
 
       - name: finalize deploying webapp
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
         run: |
           aws s3 cp --recursive --region ap-northeast-2 dist s3://${{ secrets.WEBAPP_BUCKET_NAME }}
         working-directory: ${{ env.wd }}
