--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,9 +52,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
         run: |
-          aws s3 cp --recursive --region ap-northeast-2 dist s3://${{ secrets.WEBAPP_BUCKET_NAME }}
-          aws s3 cp \
-            s3://${{ secrets.WEBAPP_BUCKET_NAME }}/index.html \
-            s3://${{ secrets.WEBAPP_BUCKET_NAME }}/index.html \
-            --cache-control "no-store, no-cache"
+          aws s3 cp s3://${{ secrets.WEBAPP_BUCKET_NAME }}/index.html s3://${{ secrets.WEBAPP_BUCKET_NAME }}/index.html --cache-control "no-store"
         working-directory: ${{ env.wd }}
