--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,4 +53,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
         run: |
           aws s3 cp --recursive --region ap-northeast-2 dist s3://${{ secrets.WEBAPP_BUCKET_NAME }} --exclude "index.html"
+          aws s3 cp dist/index.html s3://${{ secrets.WEBAPP_BUCKET_NAME }} --cache-control="no-store,no-cache"
         working-directory: ${{ env.wd }}
