--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,8 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-          aws s3 cp --recursive --region ap-northeast-2 dist s3://${{ secrets.WEBAPP_BUCKET_NAME }} --exclude "index.html"
-          aws s3 cp --region ap-northeast-2 dist/index.html s3://${{ secrets.WEBAPP_BUCKET_NAME }} --cache-control="no-store,no-cache"
+          aws s3 cp --recursive dist s3://${{ secrets.WEBAPP_BUCKET_NAME }} --exclude "index.html"
+          aws s3 cp dist/index.html s3://${{ secrets.WEBAPP_BUCKET_NAME }} --cache-control="no-store,no-cache"
         working-directory: ${{ env.wd }}
