--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,3 +57,47 @@ jobs:
           aws s3 cp dist s3://${{ secrets.WEBAPP_BUCKET_NAME }} --recursive --exclude="*" --include="*.html" --cache-control="no-store,no-cache"
           aws s3 cp dist s3://${{ secrets.WEBAPP_BUCKET_NAME }} --recursive --exclude="*.html" --cache-control="max-age=31536000"
         working-directory: ${{ env.wd }}
+
+  deploy_api_server:
+    if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'backend')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+
+      - name: Install lerna
+        run: yarn global add lerna
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        id: yarn-cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install All Dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: lerna bootstrap
+
+      - name: Create env file
+        run: |
+          touch .env
+          echo PORT=${{ secrets.PORT }} >> .env
+          echo REDIS_HOST=${{ secrets.REDIS_HOST }} >> .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+          echo COOKIE_DOMAIN=${{ secrets.COOKIE_DOMAIN }} >> .env
+          echo MAX_COOKIE_AGE=${{ secrets.MAX_COOKIE_AGE }} >> .env
+          echo ORIGIN=${{ secrets.ORIGIN }} >> .env
+          echo OAUTH_REDIRECT_BASE_URL=${{ secrets.OAUTH_REDIRECT_BASE_URL }} >> .env
+          echo SOCKET_SERVER_URL=${{ secrets.SOCKET_SERVER_URL }} >> .env
+          echo SESSION_ID_TTL_IN_SEC=${{ secrets.SESSION_ID_TTL_IN_SEC }} >> .env
+          echo GOOGLE_OAUTH_CLIENT_ID=${{ secrets.GOOGLE_OAUTH_CLIENT_ID }} >> .env
+          echo GOOGLE_OAUTH_CLIENT_SECRET=${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }} >> .env
+          echo GOOGLE_POSTMAN_SECRET=${{ secrets.GOOGLE_POSTMAN_SECRET }} >> .env
+          echo AWS_IDENTITY_POOL_ID=${{ secrets.AWS_IDENTITY_POOL_ID }} >> .env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+          echo AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }} >> .env
+
+      - name: Build and push server image
+        run: ./push-api-server.sh
