--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,5 +105,5 @@ jobs:
       - name: Copy .pem keys
         run: |
           touch public.pem
-          echo ${{ API_SERVER_PRIVATE_KEY }} >> public.pem
+          echo ${{ secrets.API_SERVER_PRIVATE_KEY }} >> public.pem
         working-directory: ${{ env.wd }}
