--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "independent",
+  "version": "10.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
