--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Deploy i18n asset files
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET2 }}
           AWS_REGION: ap-northeast-2
         run: |
           aws s3 cp i18n-assets s3://ronnie.test/locales/${{ env.DEPLOY_VERSION }} --recursive
