--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,14 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
+      - name: Check the existence of i18n asset directory
+        id: check_i18n_directory
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "i18n-assets"
+
       - name: Deploy i18n asset files
+        if: steps.check_i18n_directory.outputs.files_exists == 'true'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
