--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,10 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       
       - name: Check the existence of i18n asset directory
-        id: check_i18n_directory
-        uses: andstor/file-existence-action@v1
+        id: check-i18n-directory
+        uses: andstor/file-existence-action@v2
         with:
-          files: "i18n-assets"
+          files: "i18-assets"
 
       - name: Deploy i18n asset files
         if: steps.check_i18n_directory.outputs.files_exists == 'true'
