--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         id: check-i18n-directory
         uses: andstor/file-existence-action@v2
         with:
-          files: "i18-assets"
+          files: "i18-assets/"
 
       - name: Deploy i18n asset files
         if: steps.check_i18n_directory.outputs.files_exists == 'true'
