--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           files: "i18-assets/"
 
       - name: Deploy i18n asset files
-        if: steps.check_i18n_directory.outputs.files_exists == 'true'
+        if: steps.check-i18n-directory.outputs.files_exists == 'true'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
