--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,13 +25,11 @@ jobs:
         id: check-i18n-assets
         run: |
           if [ -d i18n-assets ]; then
-            echo "true"
-          else
-            echo "false"
+            echo "I18N_ASSET_EXISTS" >> $GITHUB_ENV
           fi
         
       - name: Deploy i18n asset files
-        if: steps.check-i18n-assets.outputs == 'true'
+        if: ${{ env.I18N_ASSET_EXISTS }} == 'true'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
