--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         id: check-i18n-assets
         run: |
           if [ -d i18n-assets ]; then
-            echo "I18N_ASSET_EXISTS" >> $GITHUB_ENV
+            echo "I18N_ASSET_EXISTS=true" >> $GITHUB_ENV
           fi
         
       - name: Deploy i18n asset files
