--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           fi
         
       - name: Deploy i18n asset files
-        if: ${{ env.I18N_ASSET_EXISTS }} == 'true'
+        if: env.I18N_ASSET_EXISTS == 'true'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
