--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
 env:
   SOMETHING: cool
   I18N_ASSET_DIRECTORY: i18n-assets
-  I18N_ASSET_FILE_NAME: common-web.json
 
 jobs:
   deploy_api_server:
@@ -23,10 +22,9 @@ jobs:
       - name: Get release version
         run: echo "DEPLOY_VERSION=v$(cat ./lerna.json | jq -r '.version')" >> $GITHUB_ENV
       
-      - name: Check i18n asset file existence
-        id: check-i18n-assets
+      - name: Check i18n asset existence
         run: |
-          if [ -f ${{ env.I18N_ASSET_DIRECTORY }}/**/${{ env.I18N_ASSET_FILE_NAME }} ]; then
+          if [ d ${{ env.I18N_ASSET_DIRECTORY }} ]; then
             echo "I18N_ASSET_EXISTS=true" >> $GITHUB_ENV
           fi
         
