--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,7 @@ env:
 jobs:
   update_changelog:
     runs-on: ubuntu-latest
-    if: >-
-      (github.event.action == 'opened' &&
-      contains(github.event.pull_request.labels.*.name, ${{ env.TRIGGER_LABEL }})) ||
-      (github.event.action == 'labeled' &&
-      github.event.label.name == ${{ env.TRIGGER_LABEL }})
+    if: ${{ github.event.label.name === env.TRIGGER_LABEL }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
