--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,12 @@ jobs:
           milestone_title=$(echo "${{ github.event.pull_request.base.ref }}" | sed -E 's/^release\/(.*)/\1/')
           echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
 
-      - name: Fetch milestone number
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/milestones")
-          milestone_number=$(echo "$response" | jq ".[] | select(.title == \"$MILESTONE_TITLE\") | .number")
-          echo "MILESTONE_NUMBER=$milestone_number" >> $GITHUB_ENV
-
       - name: Fetch PRs in milestone and update CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?state=all&per_page=100")
-          prs_in_milestone=$(echo "$response" | jq ".[] | select(.milestone.number == $MILESTONE_NUMBER) | \"- [\(.title)](\(.html_url))\"")
+          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY")
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
           echo "PRs in milestone $MILESTONE_TITLE:"
           echo "$prs_in_milestone"
 
