--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,14 +33,7 @@ jobs:
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY")
           prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
-          echo "PRs in milestone $MILESTONE_TITLE:"
-          echo "$prs_in_milestone"
-
-          echo -e "\n## $MILESTONE_TITLE\n" >> CHANGELOG.md
-          for pr in "${prs_in_milestone[@]}"
-          do
-            echo "$pr" | sed 's/^"//' | sed 's/"$//' >> CHANGELOG.md
-          done
+          echo $prs_in_milestone >> CHANGELOG.md
 
       - name: Commit and push changes
         env:
