--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY")
-          echo $response >> CHANGELOG.md
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
+          echo $prs_in_milestone >> CHANGELOG.md
 
       - name: Commit and push changes
         env:
