--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY")
-          echo $response >> CHANGELOG.md
+          echo https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY >> CHANGELOG.md
 
       - name: Commit and push changes
         env:
