--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY")
-          echo $GITHUB_TOKEN >> CHANGELOG.md
-          echo https://api.github.com/search/issues?q=milestone:$MILESTONE_TITLE+type:pr+repo:$GITHUB_REPOSITORY >> CHANGELOG.md
+          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
+          echo $prs_in_milestone >> CHANGELOG.md
 
       - name: Commit and push changes
         env:
