--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
           prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
+          echo $MILESTONE_TITLE
           echo $prs_in_milestone >> CHANGELOG.md
 
       - name: Commit and push changes
