--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Extract milestone title from branch name
         run: |
           milestone_title=$(echo "${{ github.event.pull_request.base.ref }}" | sed -E 's/^release\/(.*)/\1/')
+          echo ${{ github.event.pull_request.base.ref }}
           echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
 
       - name: Fetch PRs in milestone and update CHANGELOG.md
