--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | {url, title}')
-          echo $MILESTONE_TITLE
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | "- \(.title) \(.url)"')
           echo $prs_in_milestone >> CHANGELOG.md
 
       - name: Commit and push changes
