--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,13 +33,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | "- \(.title) \(.url)"')
+          prs_in_milestone=$(echo "$response" | jq -r '.items[] | select(.state == "open") | "- \(.title) \(.number) \(.url)"')
           echo $prs_in_milestone >> CHANGELOG.md
 
           echo -e "\n## $MILESTONE_TITLE\n" >> CHANGELOG.md
           for pr in "${prs_in_milestone[@]}"
           do
-            echo "$pr" | sed 's/^"//' | sed 's/"$//' >> CHANGELOG.md
+            echo "$pr" >> CHANGELOG.md
           done
 
       - name: Commit and push changes
