--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq '.items[] | select(.state == "open" and .labels[].name != "release") | "- \(.title) [\(.number)](\(.url))"')
-
+          prs_in_milestone=$(echo "$response" | jq '.items[] | select(.state == "open" and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [\(.number)](\(.url))"')
 
           echo -e "\n## $MILESTONE_TITLE\n" >> CHANGELOG.md
           for pr in "${prs_in_milestone[@]}"
