--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,7 @@ jobs:
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
           prs_in_milestone=$(echo "$response" | jq '.items[] | select(.state == "open" and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [#\(.number)](\(.html_url))"')
 
-          echo -e "\n## $MILESTONE_TITLE\n" >> CHANGELOG.md
-          cat <(for pr in "${prs_in_milestone[@]}"; do printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')"; done) CHANGELOG.md > tmp && mv tmp CHANGELOG.md
+          cat <echo -e "\n## $MILESTONE_TITLE\n" (for pr in "${prs_in_milestone[@]}"; do printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')"; done) CHANGELOG.md > tmp && mv tmp CHANGELOG.md
 
       - name: Commit and push changes
         env:
