--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add CHANGELOG.md
+          git add output.md
           git commit -m "Update CHANGELOG.md with PRs in milestone $MILESTONE_TITLE"
           git push
