--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,13 +35,13 @@ jobs:
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
           prs_in_milestone=$(echo "$response" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [#\(.number)](\(.html_url))"')
 
-          printf '%s\n' "## $MILESTONE_TITLE" >> output.md
+          printf '\n%s\n' "## $MILESTONE_TITLE" >> output.md
           for pr in "${prs_in_milestone[@]}"
           do
             printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')" >> output.md
           done
 
-          sed -i '3r output.md' CHANGELOG.md
+          sed -i '/^# CHANGELOG/ r output.md' CHANGELOG.md
           rm output.md
 
       - name: Commit and push changes
