--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,8 @@ jobs:
             printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')" >> output.md
           done
 
-          sed -i '/^# CHANGELOG/ r output.md' CHANGELOG.md
+          cat output.md >> CHANGELOG.md
           rm output.md
-
-          sed -i '2i\ content content content' CHANGELOG.md
 
       - name: Commit and push changes
         env:
