--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
           prs_in_milestone=$(echo "$response" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [#\(.number)](\(.html_url))"')
 
-          printf '\n\n%s\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
           for pr in "${prs_in_milestone[@]}"
           do
             printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')" >> changelog_tmp.md
