--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,22 +27,6 @@ jobs:
           echo ${{ github.event.pull_request.head.ref }}
           echo "MILESTONE_TITLE=$milestone_title" >> $GITHUB_ENV
 
-      - name: Fetch PRs in milestone and update CHANGELOG.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          response=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/search/issues?q=milestone:v13.1.2+type:pr+repo:$GITHUB_REPOSITORY")
-          prs_in_milestone=$(echo "$response" | jq '.items[] | select(.pull_request.merged_at != null and (.labels | map(select(.name == "release")) | length == 0)) | "- \(.title) [#\(.number)](\(.html_url))"')
-
-          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
-          for pr in "${prs_in_milestone[@]}"
-          do
-            printf '%s\n' "$(echo "$pr" | sed 's/^"\|"$//g')" >> changelog_tmp.md
-          done
-
-          sed -i '/^# CHANGELOG/ r changelog_tmp.md' CHANGELOG.md
-          rm changelog_tmp.md
-
       - name: Request ChatGPT to write down CHANGELOG content
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
@@ -60,9 +44,12 @@ jobs:
               ]
             }' 
           )
-          changelog_content=$(echo $response | jq)
+          changelog_content=$(echo $response | jq '.choices[].message.content')
+          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          printf '%s\n' "$(echo "$changelog_content" | sed 's/^"\|"$//g')" >> changelog_tmp.md
 
-          echo $changelog_content
+          sed -i '/^# CHANGELOG/ r changelog_tmp.md' CHANGELOG.md
+          rm changelog_tmp.md
 
       - name: Commit and push changes
         env:
