--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,14 @@ jobs:
               "messages": [
                 { 
                   "role": "user",
-                  "content": "Please write down a markdown content based on this data\n```\n{\n  \"title\": \"2313\",\n  \"number\": 133,\n  \"url\": \"https://github.com/jaehyeon48/github-actions-test/pull/133\",\n  \"package\": \"app-installation-1\"\n}\n{\n  \"title\": \"merge test\",\n  \"number\": 112,\n  \"url\": \"https://github.com/jaehyeon48/github-actions-test/pull/112\",\n  \"package\": \"reivews\"\n}\n```\nin the format like this\n```\n### package\n\n- title [#number](url)\n```"
+                  "content": "Please write down a markdown content based on this data\n```\n{\n  \"title\": \"2313\",\n  \"number\": 133,\n  \"url\": \"https://github.com/jaehyeon48/github-actions-test/pull/133\",\n  \"package\": \"app-installation-1\"\n}\n{\n  \"title\": \"merge test\",\n  \"number\": 112,\n  \"url\": \"https://github.com/jaehyeon48/github-actions-test/pull/112\",\n  \"package\": \"reivews\"\n}\n```\nin the format like this\n```\n### package\n\n- title [#number](url)\n- title [#number](url)\n\n### other package\n\n- title [#number](url)\n- title [#number](url)\n\n```"
                 }
               ]
             }' 
           )
           changelog_content=$(echo $response | jq -r '.choices[].message.content')
           
-          printf '\n%s\n\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
+          printf '\n%s\n' "## $MILESTONE_TITLE" >> changelog_tmp.md
           echo -e "$changelog_content" >> changelog_tmp.md
           
           awk '/^# CHANGELOG/ {print; system("cat changelog_tmp.md"); next}1' CHANGELOG.md > temp
